--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     // 🧠 Example of usage:
     // buildPeter() // should return { firstName: "Peter", lastName: "Pan", age: 12 }
     function buildPeter() {
-
+      return {
+        firstName: 'Peter',
+        lastName: 'Pan',
+        age: 12
+      }
     }
 
     // 👉 CHALLENGE 2
@@ -31,7 +35,11 @@
     // 🧠 Example of usage:
     // buildUser("John", "Smith", 30) // should return { firstName: "John", lastName: "Smith", age: 30 }
     function buildUser(firstName, lastName, age) {
-
+      return {
+        firstName: firstName,
+        lastName: lastName,
+        age: age
+      }
     }
 
     // 👉 CHALLENGE 3
@@ -42,8 +50,13 @@
     // 🧠 Examples of usage:
     // deletePrice({ item: "Tesla Model 3", price: 40000 }) // should return { item: "Tesla Model 3" }
     // deletePrice({ item: "Kobo Libra 2" }) // should return { item: "Kobo Libra 2", priceless: true }
-    function deletePrice() {
-
+    function deletePrice(obj) {
+      if('price' in obj) {
+        delete obj.price
+      } else {
+        obj.priceless = true
+      }
+      return obj
     }
 
     // 👉 CHALLENGE 4
@@ -53,7 +66,11 @@
     // evenList(['a']) // should return false
     // evenList(['a', 'b']) // should return true
     function evenList(arr) {
-
+      if(arr.length % 2 === 1) {
+        return false
+      } else {
+        return true
+      }
     }
 
     // 👉 CHALLENGE 5
@@ -62,8 +79,12 @@
     // 🧠 Examples of usage:
     // firstOrLast(['a', 'b'], true) // should return 'a'
     // firstOrLast(['a', 'b'], false) // should return 'b'
-    function firstOrLast() {
-
+    function firstOrLast(arr, bool) {
+      if(bool) {
+        return arr[0]
+      } else {
+        return arr[arr.length - 1]
+      }
     }
 
     // 👉 CHALLENGE 6
@@ -72,8 +93,9 @@
     // 🧠 Examples of usage:
     // pushElement([], 1) // should return [1]
     // pushElement(['a', 'b'], 'c') // should return ['a', 'b', 'c']
-    function pushElement() {
-
+    function pushElement(arr, value) {
+      arr.push(value)
+      return arr
     }
 
     // 👉 CHALLENGE 7
@@ -88,8 +110,14 @@
     // 🧠 At each iteration of the loop, if the current character is not "x", then add it to the end of the result array.
     // 🧠 You can merge the result array back into a string by using join. Example: ["f", "o", "o"].join("") yields "foo"
     // 🧠 Do not forget to return your rejoined string!
-    function stripX() {
-
+    function stripX(str) {
+      let newArr = []
+      str.split('')
+      for(let i = 0; i < str.length; i++) {
+        if(str[i] !== 'x')
+          newArr.push(str[i])
+      }
+      return newArr.join('')
     }
 
     // 👉 CHALLENGE 8
@@ -101,8 +129,14 @@
     // ❗ Important Notes:
     // 🧠 Try to solve this problem without looking at how you solved the previous one.
     // 🧠 If you need to look, do not copy & paste code. Take a peek and then work from memory!
-    function stripChar() {
-
+    function stripChar(str, char) {
+      let newArr = []
+      str = str.split('')
+      str.map(value => {
+        if(value !== char)
+          newArr.push(value)
+      })
+      return newArr.join('')
     }
 
     // 👉 CHALLENGE 9
@@ -114,8 +148,11 @@
     // getProps({ lastName: "Smith", age: 35 }) // should return ["lastName"]
     // getProps({ firstName: "Jane", married: false }) // should return ["firstName"]
     // getProps({ name: "Bamby", favFood: "flowers" }) // should return ["name", "favFood"]
-    function getProps() {
-
+    function getProps(obj) {
+      let keys = Object.keys(obj)
+      let answer = []
+      keys.forEach(value => value !== 'age' && value !== 'married' ? answer.push(value) : null)
+      return answer
     }
 
     // 🧪 TESTS, do not work below this line
